<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_event">
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.alertofevents.ui.settings.SettingsFragment"
        android:label="@string/settingsFragmentTitle" />
    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.alertofevents.ui.event.EventFragment"
        android:label="@string/eventFragmentTitle" >
        <action
            android:id="@+id/showCalendar"
            app:destination="@id/navigation_calendar_events" />
        <argument
            android:name="eventId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/navigation_calendar_events"
        android:name="com.example.alertofevents.ui.calendarEvents.CalendarEventsFragment"
        android:label="@string/calendarEventsFragmentTitle" >
        <action
            android:id="@+id/editEvent"
            app:destination="@id/navigation_event" />
        <argument
            android:name="day"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="month"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>